--- a/.github/workflows/deploy-qa.yml
+++ b/.github/workflows/deploy-qa.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 permissions:
-  contents: read
+  contents: write  # Changed from 'read' to 'write' to allow pushing tags
 
 jobs:
   deploy-to-qa:
@@ -18,6 +18,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          token: ${{ secrets.PAT_TOKEN }}  # Add PAT here too
 
       - name: Install Salesforce CLI
         run: |
@@ -158,7 +159,7 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git tag "$QA_TAG"
-          git push https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }}.git "$QA_TAG"
+          git push origin "$QA_TAG"
           echo "✅ QA deployment tagged: $QA_TAG"
 
       - name: Deployment Success
