--- a/.github/workflows/deploy-qa.yml
+++ b/.github/workflows/deploy-qa.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 permissions:
-  contents: write  # Changed from 'read' to 'write' to allow pushing tags
+  contents: write
 
 jobs:
   deploy-to-qa:
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          token: ${{ secrets.PAT_TOKEN }}  # Add PAT here too
+          token: ${{ secrets.PAT_TOKEN }}
 
       - name: Install Salesforce CLI
         run: |
@@ -171,3 +171,170 @@ jobs:
           echo "✅ QA deployment completed successfully!"
           echo "📊 Test Run Coverage: $TEST_RUN (Target: ≥${THRESHOLD}%)"
           echo "📊 Org-wide Coverage: $ORG_WIDE"
+
+  update-jira-ticket:
+    name: Move Jira Ticket to QA
+    runs-on: ubuntu-latest
+    needs: deploy-to-qa
+    if: success()
+    
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Get merged PR info
+        id: pr-info
+        run: |
+          # Get the PR that was just merged to main
+          PR_NUMBER=$(gh pr list --state merged --base main --limit 1 --json number --jq '.[0].number')
+          
+          if [ -z "$PR_NUMBER" ]; then
+            echo "No merged PR found"
+            echo "HAS_PR=false" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+          
+          # Get the branch name from that PR
+          BRANCH_NAME=$(gh pr view $PR_NUMBER --json headRefName --jq '.headRefName')
+          
+          echo "PR Number: $PR_NUMBER"
+          echo "Branch name: $BRANCH_NAME"
+          echo "pr_number=$PR_NUMBER" >> $GITHUB_OUTPUT
+          echo "branch_name=$BRANCH_NAME" >> $GITHUB_OUTPUT
+          echo "HAS_PR=true" >> $GITHUB_OUTPUT
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Extract Jira Ticket from Branch Name
+        if: steps.pr-info.outputs.HAS_PR == 'true'
+        id: jira
+        run: |
+          BRANCH_NAME="${{ steps.pr-info.outputs.branch_name }}"
+          echo "Branch name: $BRANCH_NAME"
+          
+          # Extract ticket number (e.g., HL-328 from HL-328_fix_bug)
+          if [[ $BRANCH_NAME =~ ^([A-Z]+-[0-9]+)_ ]]; then
+            TICKET="${BASH_REMATCH[1]}"
+            echo "Found Jira ticket: $TICKET"
+            echo "ticket=$TICKET" >> $GITHUB_OUTPUT
+            echo "HAS_TICKET=true" >> $GITHUB_OUTPUT
+          else
+            echo "No Jira ticket found in branch name"
+            echo "HAS_TICKET=false" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Update Jira Ticket Status
+        if: steps.jira.outputs.HAS_TICKET == 'true'
+        run: |
+          TICKET="${{ steps.jira.outputs.ticket }}"
+          JIRA_URL="${{ secrets.JIRA_URL }}"
+          JIRA_EMAIL="${{ secrets.JIRA_EMAIL }}"
+          JIRA_API_TOKEN="${{ secrets.JIRA_API_TOKEN }}"
+          
+          echo "Moving $TICKET to QA status..."
+          
+          # Get available transitions for the ticket
+          TRANSITIONS=$(curl -s -u "$JIRA_EMAIL:$JIRA_API_TOKEN" \
+            -X GET \
+            -H "Content-Type: application/json" \
+            "$JIRA_URL/rest/api/3/issue/$TICKET/transitions")
+          
+          # Find the transition ID for "QA" or "In QA" status
+          TRANSITION_ID=$(echo "$TRANSITIONS" | jq -r '.transitions[] | select(.name | test("QA"; "i")) | .id' | head -1)
+          
+          if [ -z "$TRANSITION_ID" ]; then
+            echo "⚠️ Could not find 'QA' transition for ticket $TICKET"
+            echo "Available transitions:"
+            echo "$TRANSITIONS" | jq -r '.transitions[] | "\(.id): \(.name)"'
+            exit 0
+          fi
+          
+          echo "Using transition ID: $TRANSITION_ID"
+          
+          # Transition the ticket
+          RESPONSE=$(curl -s -u "$JIRA_EMAIL:$JIRA_API_TOKEN" \
+            -X POST \
+            -H "Content-Type: application/json" \
+            -d "{\"transition\":{\"id\":\"$TRANSITION_ID\"}}" \
+            "$JIRA_URL/rest/api/3/issue/$TICKET/transitions")
+          
+          if [ -z "$RESPONSE" ]; then
+            echo "✅ Successfully moved $TICKET to QA status"
+          else
+            echo "Response: $RESPONSE"
+            # Don't fail the workflow if Jira update fails
+            echo "⚠️ Jira update may have failed, but continuing..."
+          fi
+
+      - name: Add Comment to Jira Ticket
+        if: steps.jira.outputs.HAS_TICKET == 'true'
+        run: |
+          TICKET="${{ steps.jira.outputs.ticket }}"
+          JIRA_URL="${{ secrets.JIRA_URL }}"
+          JIRA_EMAIL="${{ secrets.JIRA_EMAIL }}"
+          JIRA_API_TOKEN="${{ secrets.JIRA_API_TOKEN }}"
+          COMMIT_SHA="${{ github.sha }}"
+          SHORT_SHA="${COMMIT_SHA:0:7}"
+          COMMIT_URL="https://github.com/${{ github.repository }}/commit/$COMMIT_SHA"
+          
+          COMMENT=$(cat <<EOF
+          {
+            "body": {
+              "type": "doc",
+              "version": 1,
+              "content": [
+                {
+                  "type": "paragraph",
+                  "content": [
+                    {
+                      "type": "text",
+                      "text": "✅ Code deployed to QA",
+                      "marks": [{"type": "strong"}]
+                    }
+                  ]
+                },
+                {
+                  "type": "paragraph",
+                  "content": [
+                    {
+                      "type": "text",
+                      "text": "Commit: "
+                    },
+                    {
+                      "type": "text",
+                      "text": "$SHORT_SHA",
+                      "marks": [
+                        {
+                          "type": "link",
+                          "attrs": {
+                            "href": "$COMMIT_URL"
+                          }
+                        }
+                      ]
+                    }
+                  ]
+                },
+                {
+                  "type": "paragraph",
+                  "content": [
+                    {
+                      "type": "text",
+                      "text": "Deployed by: ${{ github.actor }}"
+                    }
+                  ]
+                }
+              ]
+            }
+          }
+          EOF
+          )
+          
+          curl -s -u "$JIRA_EMAIL:$JIRA_API_TOKEN" \
+            -X POST \
+            -H "Content-Type: application/json" \
+            -d "$COMMENT" \
+            "$JIRA_URL/rest/api/3/issue/$TICKET/comment"
+          
+          echo "✅ Added comment to $TICKET"
