--- a/.github/workflows/deploy-qa.yml
+++ b/.github/workflows/deploy-qa.yml
@@ -12,7 +12,7 @@ jobs:
   deploy-to-qa:
     name: Deploy to QA Org
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -172,51 +172,46 @@ jobs:
           echo "📊 Test Run Coverage: $TEST_RUN (Target: ≥${THRESHOLD}%)"
           echo "📊 Org-wide Coverage: $ORG_WIDE"
 
-update-jira-ticket:
+  update-jira-ticket:
     name: Move Jira Ticket to QA
     runs-on: ubuntu-latest
     needs: deploy-to-qa
     if: success()
-    
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 10
+          fetch-depth: 0
 
-      - name: Get branch name from commit history
-        id: branch-info
+      - name: Get merged PR info
+        id: pr-info
         run: |
-          # Get the commit message which might contain branch info
-          COMMIT_MSG=$(git log -1 --pretty=%B)
-          echo "Commit message: $COMMIT_MSG"
+          # Get the PR that was just merged to main
+          PR_NUMBER=$(gh pr list --state merged --base main --limit 1 --json number --jq '.[0].number')
           
-          # Try to find branch name from recent merge commits
-          BRANCH_NAME=$(git log --merges -10 --pretty=format:"%s" | grep -oP "Merge pull request #\d+ from [^/]+/\K.+" | head -1)
-          
-          if [ -z "$BRANCH_NAME" ]; then
-            # Alternative: check git reflog for branch info
-            BRANCH_NAME=$(git reflog show --pretty=format:"%gs" -10 | grep -oP "merge \K[^ ]+" | grep -v "^origin/" | head -1)
-          fi
-          
-          if [ -z "$BRANCH_NAME" ]; then
-            echo "Could not find branch name from git history"
-            echo "HAS_BRANCH=false" >> $GITHUB_OUTPUT
+          if [ -z "$PR_NUMBER" ]; then
+            echo "No merged PR found"
+            echo "HAS_PR=false" >> $GITHUB_OUTPUT
             exit 0
           fi
           
-          # Clean up branch name (remove origin/ if present)
-          BRANCH_NAME=$(echo "$BRANCH_NAME" | sed 's|^origin/||')
+          # Get the branch name from that PR
+          BRANCH_NAME=$(gh pr view $PR_NUMBER --json headRefName --jq '.headRefName')
           
-          echo "Found branch name: $BRANCH_NAME"
+          echo "PR Number: $PR_NUMBER"
+          echo "Branch name: $BRANCH_NAME"
+          echo "pr_number=$PR_NUMBER" >> $GITHUB_OUTPUT
           echo "branch_name=$BRANCH_NAME" >> $GITHUB_OUTPUT
-          echo "HAS_BRANCH=true" >> $GITHUB_OUTPUT
+          echo "HAS_PR=true" >> $GITHUB_OUTPUT
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract Jira Ticket from Branch Name
-        if: steps.branch-info.outputs.HAS_BRANCH == 'true'
+        if: steps.pr-info.outputs.HAS_PR == 'true'
         id: jira
         run: |
-          BRANCH_NAME="${{ steps.branch-info.outputs.branch_name }}"
+          BRANCH_NAME="${{ steps.pr-info.outputs.branch_name }}"
           echo "Branch name: $BRANCH_NAME"
           
           # Extract ticket number (e.g., HL-328 from HL-328_fix_bug)
@@ -226,7 +221,7 @@ update-jira-ticket:
             echo "ticket=$TICKET" >> $GITHUB_OUTPUT
             echo "HAS_TICKET=true" >> $GITHUB_OUTPUT
           else
-            echo "No Jira ticket found in branch name: $BRANCH_NAME"
+            echo "No Jira ticket found in branch name"
             echo "HAS_TICKET=false" >> $GITHUB_OUTPUT
           fi
 
@@ -269,6 +264,7 @@ update-jira-ticket:
             echo "✅ Successfully moved $TICKET to QA status"
           else
             echo "Response: $RESPONSE"
+            # Don't fail the workflow if Jira update fails
             echo "⚠️ Jira update may have failed, but continuing..."
           fi
 
@@ -283,7 +279,7 @@ update-jira-ticket:
           SHORT_SHA="${COMMIT_SHA:0:7}"
           COMMIT_URL="https://github.com/${{ github.repository }}/commit/$COMMIT_SHA"
           
-          COMMENT=$(cat <<'EOF'
+          COMMENT=$(cat <<EOF
           {
             "body": {
               "type": "doc",
@@ -308,12 +304,12 @@ update-jira-ticket:
                     },
                     {
                       "type": "text",
-                      "text": "SHORT_SHA_PLACEHOLDER",
+                      "text": "$SHORT_SHA",
                       "marks": [
                         {
                           "type": "link",
                           "attrs": {
-                            "href": "COMMIT_URL_PLACEHOLDER"
+                            "href": "$COMMIT_URL"
                           }
                         }
                       ]
@@ -325,20 +321,15 @@ update-jira-ticket:
                   "content": [
                     {
                       "type": "text",
-                      "text": "Deployed by: ACTOR_PLACEHOLDER"
+                      "text": "Deployed by: ${{ github.actor }}"
                     }
                   ]
                 }
               ]
             }
           }
-EOF
+          EOF
           )
-          
-          # Replace placeholders
-          COMMENT=$(echo "$COMMENT" | sed "s|SHORT_SHA_PLACEHOLDER|$SHORT_SHA|g")
-          COMMENT=$(echo "$COMMENT" | sed "s|COMMIT_URL_PLACEHOLDER|$COMMIT_URL|g")
-          COMMENT=$(echo "$COMMENT" | sed "s|ACTOR_PLACEHOLDER|${{ github.actor }}|g")
           
           curl -s -u "$JIRA_EMAIL:$JIRA_API_TOKEN" \
             -X POST \
